--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,5 +49,14 @@ a{
 
 .Content{
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  flex-direction: column
+}
+h1{
+  height: 200px;
+  display: flex;
+  align-content: flex-end;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
 }
