--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,3 +60,11 @@ h1{
   flex-direction: row;
   justify-content: center;
 }
+.img1{
+  position: absolute;
+  z-index: 1;
+}
+.img2{
+  position: absolute;
+z-index: 2;
+}
