--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,7 +49,7 @@ a{
 
 .Content{
   display: flex;
-  /* justify-content: space-around; */
+  justify-content: space-around;
   flex-direction: column
 }
 h1{
