--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -53,7 +53,7 @@ a{
   flex-direction: column
 }
 h1{
-  height: 200px;
+  /* height: 200px; */
   display: flex;
   align-content: flex-end;
   flex-wrap: nowrap;
